# markitdown-gui

./: .gitignore  LICENSE  README.md  build-release.cmd  pyproject.toml  sample.md
.github/workflows/: release.yml
pyinstaller/: markitdown-gui.spec
src/markitdown_gui/: __init__.py  __main__.py  _app.py  _copilot_formatter.py  _copilot_setup_dialog.py  _localization.py  _main_window.py  _service.py  _temp_cleanup.py  _worker.py  _xlsx_pdf_exporter.py
tests/: gui_smoke_batch.py  test_copilot_formatter.py  test_main_window.py  test_service.py  test_temp_cleanup.py  test_xlsx_pdf_exporter.py
